# SideScrollShooter-

./: .gitignore  CMakeLists.txt  ReadMe.MD  main.cpp
Bases/: Bases.cpp  Bases.hpp  Controller.cpp  Controller.hpp  EnemyController.cpp  EnemyController.hpp  GameObject.cpp  GameObject.hpp  SceneObject.hpp  Updatable.hpp
Bases/ImplSfml/: Color.hpp  SfmlFont.cpp  SfmlFont.hpp  SfmlResourceFactory.cpp  SfmlResourceFactory.hpp  SfmlSprite.cpp  SfmlSprite.hpp  SfmlText.cpp  SfmlText.hpp  SfmlTexture.cpp  SfmlTexture.hpp  Vector2.hpp
Bases/Interfaces/: IDestructable.hpp  IFont.hpp  ILoadable.hpp  IResourceFactory.hpp  ISceneObject.hpp  ISprite.hpp  IText.cpp  IText.hpp  ITexture.hpp  IUpdatable.hpp
GameSources/: EndGameScreen.cpp  EndGameScreen.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  ScreenEndGame.cpp  ScreenEndGame.hpp
Utility/: EventDispatcher.hpp  PCH.cpp  PCH.hpp  SfmlUtility.cpp  SfmlUtility.hpp  Timer.cpp  Timer.hpp
